[package]
name = "mmr"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Minimap2 CLI written in rust using bindings with BINSEQ and VBINSEQ support."
repository = "https://github.com/arcinstitute/mmr"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["long-read", "minimap2", "binseq", "vbinseq", "alignment"]

[features]
default = []
sse2only = ["minimap2/sse2only"]
simde = ["minimap2/simde"]

[dependencies]
minimap2 = { version = "0.1.23+minimap2.2.28", default-features = false }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive", "rc"] }
csv = "1.3.1"
parking_lot = "0.12.3"
clap = { version = "4.5.26", features = ["derive"] }
paraseq = "0.1.2"
niffler = "3.0.0"
num_cpus = "1.16.0"
indicatif = "0.17.11"
serde_json = "1.0.138"
binseq = "0.6.2"

[profile.release]
lto = true
codegen-units = 1
