[package]
name = "mmr"
version = "0.1.5"
edition = "2021"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Minimap2 CLI written in rust using bindings with BINSEQ and VBINSEQ support."
repository = "https://github.com/arcinstitute/mmr"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["long-read", "minimap2", "binseq", "vbinseq", "alignment"]

[features]
default = []
sse2only = ["minimap2/sse2only"]
simde = ["minimap2/simde"]

[dependencies]
anyhow = "1.0.98"
binseq = "0.6.5"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
indicatif = "0.18.0"
minimap2 = { version = "0.1.27", default-features = false }
niffler = "3.0.0"
num_cpus = "1.17.0"
paraseq = "0.3.9"
parking_lot = "0.12.4"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive", "rc"] }

[profile.release]
lto = true
codegen-units = 1
